--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.8.1
+cffi==1.16.0
 Django==5.0.6
+django-dotenv==1.4.2
+pillow==10.3.0
+pycparser==2.22
 sqlparse==0.5.0
-typing_extensions==4.11.0
+typing_extensions==4.12.1
