--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.8.1
+certifi==2024.6.2
 cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.8
 Django==5.0.6
+django-allauth==0.63.3
 django-dotenv==1.4.2
+idna==3.7
+jwt==1.3.1
 pillow==10.3.0
 pycparser==2.22
+PyJWT==2.8.0
+requests==2.32.3
 sqlparse==0.5.0
-typing_extensions==4.12.1
-tzdata==2024.1a
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
